--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,11 +113,11 @@ header .big-size-container .row .icons .count {
   bottom: 10px;
 }
 header .big-size-container .row .icons .box {
-  height: 300px;
+  height: 100vh;
   visibility: hidden;
   opacity: 0;
   position: absolute;
-  top: 75px;
+  top: 0px;
   right: 0;
   margin: 0 auto;
   background-color: white;
@@ -611,7 +611,7 @@ header .mobile-menu.active {
   font-size: 34px;
   position: relative;
 }
-#products .title .home .home-title:before {
+#products .title .home .home_title:before {
   position: absolute;
   content: "";
   width: 80px;
@@ -803,4 +803,464 @@ header .mobile-menu.active {
   margin-bottom: 5px;
   transition: all 0.4s;
   opacity: 1;
+}
+
+footer {
+  background-color: rgb(242, 246, 249);
+  padding: 65px 0 0 0;
+}
+footer .contact {
+  padding: 40px 20px;
+  border: 1px solid rgba(102, 102, 102, 0.15);
+  text-align: center;
+}
+footer .contact .footer_contact {
+  font-weight: 500;
+  font-size: 16px;
+  color: #eb4d4b;
+  letter-spacing: 6px;
+  font-family: "Poppins", sans-serif;
+}
+footer .contact h2 {
+  font-size: 42px;
+}
+footer .contact p {
+  margin-bottom: 28px;
+  width: 80px;
+  height: 4px;
+  background-color: #eb4d4b;
+  text-align: center;
+  display: inline-block;
+  font-family: "Poppins", sans-serif;
+}
+footer .contact form .right {
+  display: inline-block;
+  width: 46%;
+  height: 45px;
+  border-radius: 15px;
+  border: none;
+}
+footer .contact form .right::-moz-placeholder {
+  padding: 10px 16px;
+  font-family: "Poppins", sans-serif;
+}
+footer .contact form .right::placeholder {
+  padding: 10px 16px;
+  font-family: "Poppins", sans-serif;
+}
+footer .contact form .left {
+  display: inline-block;
+  width: 44%;
+  height: 45px;
+  border-radius: 15px;
+  border: none;
+}
+footer .contact form .left::-moz-placeholder {
+  padding: 10px 8px;
+  font-family: "Poppins", sans-serif;
+}
+footer .contact form .left::placeholder {
+  padding: 10px 8px;
+  font-family: "Poppins", sans-serif;
+}
+footer .contact form .form_text {
+  margin-top: 20px;
+  border: none;
+  width: 100%;
+  border-radius: 15px;
+  height: 140px;
+}
+footer .contact form .form_text::-moz-placeholder {
+  padding: 10px 16px;
+  font-family: "Poppins", sans-serif;
+}
+footer .contact form .form_text::placeholder {
+  padding: 10px 16px;
+  font-family: "Poppins", sans-serif;
+}
+footer .contact form .message {
+  width: 24%;
+  margin: 15px 0 0 0;
+  border: none;
+  border-radius: 30px;
+  height: 50px;
+  font-size: 14px;
+  font-weight: 400;
+  background-color: #eb4d4b;
+  padding-top: 4px;
+  font-family: "Poppins", sans-serif;
+  transition: 0.5s;
+}
+footer .contact form .message:hover {
+  background-color: black;
+}
+footer .subs {
+  padding: 30px 10px 30px;
+  border: 1px solid rgba(102, 102, 102, 0.15);
+  text-align: center;
+}
+footer .subs .text .subs_span {
+  font-weight: 500;
+  font-size: 16px;
+  color: #eb4d4b;
+}
+footer .subs .text h2 {
+  font-size: 42px;
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+}
+footer .subs .text .other {
+  margin-top: 10px;
+  margin-bottom: 20px;
+  width: 80px;
+  height: 4px;
+  background-color: #eb4d4b;
+  text-align: center;
+  display: inline-block;
+  font-family: "Poppins", sans-serif;
+}
+footer .subs .icon_text_ {
+  line-height: 30px;
+}
+footer .subs .icon_text_ i {
+  font-size: 50px;
+  color: #eb4d4b;
+}
+footer .subs .icon_text_ h2 {
+  margin-top: 10px;
+  font-size: 22px;
+  font-weight: 600;
+  font-family: "Poppins", sans-serif;
+}
+footer .subs .icon_text_ p {
+  font-size: 16px;
+  color: #666;
+  font-weight: 400;
+  font-family: "Poppins", sans-serif;
+}
+footer .subs .input_email {
+  position: relative;
+}
+footer .subs .input_email .email {
+  height: 50px;
+  border-radius: 30px;
+  border: 1px solid #e5e5e5;
+  width: 80%;
+}
+footer .subs .input_email .email::-moz-placeholder {
+  padding: 10px;
+}
+footer .subs .input_email .email::placeholder {
+  padding: 10px;
+}
+footer .subs .input_email .subs_btn {
+  position: absolute;
+  right: 66px;
+  top: 4px;
+  background-color: #eb4d4b;
+  border-radius: 41px;
+  width: 19%;
+  height: 42px;
+  color: white;
+}
+footer .subs .icons_social ul {
+  margin-top: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+footer .subs .icons_social ul li {
+  margin-left: 10px;
+  list-style-type: none;
+}
+footer .subs .icons_social ul li a {
+  margin-left: 5px;
+  text-decoration: none;
+}
+footer .subs .icons_social ul li a i {
+  font-size: 35px;
+}
+footer .subs .icons_social ul li a i:hover {
+  color: #eb4d4b !important;
+}
+@media only screen and (max-width: 391px) {
+  footer .contact {
+    padding: 40px 20px;
+    border: 1px solid rgba(102, 102, 102, 0.15);
+    text-align: center;
+  }
+  footer .contact span {
+    font-weight: 500;
+    font-size: 16px;
+    color: #eb4d4b;
+    letter-spacing: 6px;
+    font-family: "Poppins", sans-serif;
+  }
+  footer .contact h2 {
+    font-size: 42px;
+    font-family: "Poppins", sans-serif;
+    font-weight: 700;
+  }
+  footer .contact p {
+    margin-bottom: 28px;
+    width: 80px;
+    height: 4px;
+    background-color: #eb4d4b;
+    text-align: center;
+    display: inline-block;
+    font-family: "Poppins", sans-serif;
+  }
+  footer .contact form input {
+    display: inline-block;
+    width: 44%;
+    height: 45px;
+    border-radius: 15px;
+    border: none;
+  }
+  footer .contact form input::-moz-placeholder {
+    padding: 10px 8px;
+    font-family: "Poppins", sans-serif;
+  }
+  footer .contact form input::placeholder {
+    padding: 10px 8px;
+    font-family: "Poppins", sans-serif;
+  }
+  footer .contact form .leftInp {
+    margin-left: 32px;
+  }
+  footer .contact form textarea {
+    margin-top: 20px;
+    border: none;
+    width: 100%;
+    border-radius: 15px;
+    height: 140px;
+  }
+  footer .contact form textarea::-moz-placeholder {
+    padding: 10px 16px;
+    font-family: "Poppins", sans-serif;
+  }
+  footer .contact form textarea::placeholder {
+    padding: 10px 16px;
+    font-family: "Poppins", sans-serif;
+  }
+  footer .contact form .button {
+    width: 41%;
+    margin: 15px 0 0 0;
+    border: none;
+    border-radius: 30px;
+    height: 50px;
+    font-size: 14px;
+    font-weight: 400;
+    background-color: #eb4d4b;
+    padding-top: 14px;
+    font-family: "Poppins", sans-serif;
+    transition: 0.5s;
+  }
+  footer .contact form .button:hover {
+    background-color: black;
+  }
+  footer .subscrib {
+    padding: 30px 10px 30px;
+    border: 1px solid rgba(102, 102, 102, 0.15);
+    text-align: center;
+  }
+  footer .subscrib .text span {
+    font-weight: 500;
+    font-size: 16px;
+    color: #eb4d4b;
+    letter-spacing: 6px;
+    font-family: "Poppins", sans-serif;
+  }
+  footer .subscrib .text h2 {
+    font-size: 42px;
+    font-family: "Poppins", sans-serif;
+    font-weight: 700;
+  }
+  footer .subscrib .text p {
+    margin-top: 10px;
+    margin-bottom: 20px;
+    width: 80px;
+    height: 4px;
+    background-color: #eb4d4b;
+    text-align: center;
+    display: inline-block;
+    font-family: "Poppins", sans-serif;
+  }
+  footer .subscrib .icon-text {
+    line-height: 30px;
+  }
+  footer .subscrib .icon-text i {
+    font-size: 50px;
+    color: #eb4d4b;
+  }
+  footer .subscrib .icon-text h2 {
+    margin-top: 10px;
+    font-size: 22px;
+    font-weight: 600;
+    font-family: "Poppins", sans-serif;
+  }
+  footer .subscrib .icon-text p {
+    font-size: 16px;
+    color: #666;
+    font-weight: 400;
+    font-family: "Poppins", sans-serif;
+  }
+  footer .subscrib .inp {
+    position: relative;
+  }
+  footer .subscrib .inp input {
+    height: 50px;
+    border-radius: 30px;
+    border: 1px solid #e5e5e5;
+    width: 80%;
+  }
+  footer .subscrib .inp input::-moz-placeholder {
+    padding: 10px;
+  }
+  footer .subscrib .inp input::placeholder {
+    padding: 10px;
+  }
+  footer .subscrib .inp .button {
+    position: absolute;
+    right: 39px;
+    top: 4px;
+    background-color: #eb4d4b;
+    border-radius: 41px;
+    width: 28%;
+    height: 42px;
+    color: white;
+  }
+}
+footer .footer_text_ {
+  padding-bottom: 33px;
+  position: relative;
+  top: 20px;
+  font-size: 15px;
+}
+footer .footer_text_ .footer_text_up,
+footer .footer_text_ .footer_text_down {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+footer .footer_text_ .footer_text_up li,
+footer .footer_text_ .footer_text_down li {
+  list-style-type: none;
+  margin-right: 20px;
+}
+footer .footer_text_ .footer_text_up li a,
+footer .footer_text_ .footer_text_down li a {
+  text-decoration: none;
+  color: gray;
+  font-family: "Poppins", sans-serif;
+}
+footer .footer_text_ .footer_text_up .line,
+footer .footer_text_ .footer_text_down .line {
+  width: 1px;
+  height: 15px;
+  background-color: gray;
+  position: relative;
+  right: 10px;
+}
+footer .footer_end_ {
+  display: none;
+}
+footer .footer_end_ .accordion .accordion-item .first_accordion .accordion_body .accordion_ul {
+  padding: 0;
+}
+footer .footer_end_ .accordion .accordion-item .first_accordion .accordion_body .accordion_ul li {
+  list-style-type: none;
+}
+footer .footer_end_ .accordion .accordion-item .first_accordion .accordion_body .accordion_ul li a {
+  text-decoration: none;
+  color: gray;
+}
+@media only screen and (max-width: 820px) {
+  footer .text {
+    display: none;
+    padding-bottom: 33px;
+    position: relative;
+    top: 20px;
+    font-size: 15px;
+  }
+  footer .text .textUp,
+  footer .text .textDown {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  footer .text .textUp li,
+  footer .text .textDown li {
+    list-style-type: none;
+    margin-right: 20px;
+  }
+  footer .text .textUp li a,
+  footer .text .textDown li a {
+    text-decoration: none;
+    color: gray;
+    font-family: "Poppins", sans-serif;
+  }
+  footer .text .textUp .line,
+  footer .text .textDown .line {
+    width: 1px;
+    height: 15px;
+    background-color: gray;
+    position: relative;
+    right: 10px;
+  }
+  footer .accMd {
+    padding-bottom: 15px;
+    display: block;
+  }
+  footer .accMd .accordion .accordion-item .accordion-header .accordion-button {
+    background-color: rgb(242, 246, 249);
+  }
+  footer .accMd .accordion .accordion-item .firstAcc .accBody {
+    background-color: rgb(242, 246, 249);
+  }
+  footer .accMd .accordion .accordion-item .firstAcc .accBody ul {
+    padding: 0;
+  }
+  footer .accMd .accordion .accordion-item .firstAcc .accBody ul li {
+    list-style-type: none;
+  }
+  footer .accMd .accordion .accordion-item .firstAcc .accBody ul li a {
+    text-decoration: none;
+    color: gray;
+  }
+}
+
+.secondFooter {
+  background-color: #151515;
+}
+.secondFooter .box {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.secondFooter .box .text-img p {
+  color: white;
+}
+.secondFooter .box .text-img p a {
+  text-decoration: none;
+  color: white;
+}
+@media only screen and (max-width: 391px) {
+  .secondFooter .box {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  .secondFooter .box .text-img p {
+    color: white;
+  }
+  .secondFooter .box .text-img p a {
+    text-decoration: none;
+    color: white;
+  }
 }/*# sourceMappingURL=style.css.map */
