--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -118,11 +118,11 @@ header {
           bottom: 10px;
         }
         .box {
-          height: 300px;
+          height: 100vh;
           visibility: hidden;
           opacity: 0;
           position: absolute;
-          top: 75px;
+          top: 0px;
           right: 0;
           margin: 0 auto;
           background-color: white;
@@ -159,7 +159,7 @@ header {
             }
           }
         }
-        .box.active{
+        .box.active {
           visibility: visible;
           opacity: 1;
         }
@@ -695,7 +695,7 @@ header {
     .home {
       font-size: 34px;
       position: relative;
-      .home-title:before {
+      .home_title:before {
         position: absolute;
         content: "";
         width: 80px;
@@ -761,6 +761,7 @@ header {
     }
   }
 }
+
 
 #latest {
   .title {
@@ -898,6 +899,480 @@ header {
       margin-bottom: 5px;
       transition: all 0.4s;
       opacity: 1;
+    }
+  }
+}
+
+footer {
+  background-color: rgb(242, 246, 249);
+  padding: 65px 0 0 0;
+  .contact {
+    padding: 40px 20px;
+    border: 1px solid rgba(102, 102, 102, 0.15);
+    text-align: center;
+    .footer_contact {
+      font-weight: 500;
+      font-size: 16px;
+      color: #eb4d4b;
+      letter-spacing: 6px;
+      font-family: "Poppins", sans-serif;
+    }
+    h2 {
+      font-size: 42px;
+    }
+    p {
+      margin-bottom: 28px;
+      width: 80px;
+      height: 4px;
+      background-color: #eb4d4b;
+      text-align: center;
+      display: inline-block;
+      font-family: "Poppins", sans-serif;
+    }
+    form {
+      .right {
+        display: inline-block;
+        width: 46%;
+        height: 45px;
+        border-radius: 15px;
+        border: none;
+        &::placeholder {
+          padding: 10px 16px;
+          font-family: "Poppins", sans-serif;
+        }
+      }
+      .left {
+        display: inline-block;
+        width: 44%;
+        height: 45px;
+        border-radius: 15px;
+        border: none;
+        &::placeholder {
+            padding: 10px 8px;
+            font-family: 'Poppins', sans-serif;
+        }
+      }
+      .form_text {
+        margin-top: 20px;
+        border: none;
+        width: 100%;
+        border-radius: 15px;
+        height: 140px;
+        &::placeholder {
+          padding: 10px 16px;
+          font-family: "Poppins", sans-serif;
+        }
+      }
+      .message {
+        width: 24%;
+        margin: 15px 0 0 0;
+        border: none;
+        border-radius: 30px;
+        height: 50px;
+        font-size: 14px;
+        font-weight: 400;
+        background-color: #eb4d4b;
+        padding-top: 4px;
+        font-family: "Poppins", sans-serif;
+        transition: 0.5s;
+        &:hover {
+          background-color: black;
+        }
+      }
+    }
+  }
+  .subs {
+    padding: 30px 10px 30px;
+    border: 1px solid rgba(102, 102, 102, 0.15);
+    text-align: center;
+    .text {
+      .subs_span {
+        font-weight: 500;
+        font-size: 16px;
+        color: #eb4d4b;
+      }
+      h2 {
+        font-size: 42px;
+        font-family: "Poppins", sans-serif;
+        font-weight: 700;
+      }
+      .other {
+        margin-top: 10px;
+        margin-bottom: 20px;
+        width: 80px;
+        height: 4px;
+        background-color: #eb4d4b;
+        text-align: center;
+        display: inline-block;
+        font-family: "Poppins", sans-serif;
+      }
+    }
+    .icon_text_ {
+      line-height: 30px;
+      i {
+        font-size: 50px;
+        color: #eb4d4b;
+      }
+      h2 {
+        margin-top: 10px;
+        font-size: 22px;
+        font-weight: 600;
+        font-family: "Poppins", sans-serif;
+      }
+      p {
+        font-size: 16px;
+        color: #666;
+        font-weight: 400;
+        font-family: "Poppins", sans-serif;
+      }
+    }
+    .input_email {
+      position: relative;
+      .email {
+        height: 50px;
+        border-radius: 30px;
+        border: 1px solid #e5e5e5;
+        width: 80%;
+
+        &::placeholder {
+          padding: 10px;
+        }
+      }
+      .subs_btn {
+        position: absolute;
+        right: 66px;
+        top: 4px;
+        background-color: #eb4d4b;
+        border-radius: 41px;
+        width: 19%;
+        height: 42px;
+        color: white;
+      }
+    }
+    .icons_social{
+      ul{
+        margin-top: 25px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        li{
+          margin-left: 10px;
+          list-style-type: none;
+
+          a{
+            margin-left: 5px;
+            text-decoration: none;
+
+            i{
+              font-size: 35px;
+              &:hover{
+                color: #eb4d4b !important;
+              }
+            }
+            
+          }
+        }
+      }
+    }
+  }
+  @media only screen and (max-width: 391px) {
+    .contact {
+      padding: 40px 20px;
+      border: 1px solid rgba(102, 102, 102, 0.15);
+      text-align: center;
+      span {
+        font-weight: 500;
+        font-size: 16px;
+        color: #eb4d4b;
+        letter-spacing: 6px;
+        font-family: "Poppins", sans-serif;
+      }
+      h2 {
+        font-size: 42px;
+        font-family: "Poppins", sans-serif;
+        font-weight: 700;
+      }
+      p {
+        margin-bottom: 28px;
+        width: 80px;
+        height: 4px;
+        background-color: #eb4d4b;
+        text-align: center;
+        display: inline-block;
+        font-family: "Poppins", sans-serif;
+      }
+      form {
+        input {
+          display: inline-block;
+          width: 44%;
+          height: 45px;
+          border-radius: 15px;
+          border: none;
+          &::placeholder {
+            padding: 10px 8px;
+            font-family: "Poppins", sans-serif;
+          }
+        }
+        .leftInp {
+          margin-left: 32px;
+        }
+        textarea {
+          margin-top: 20px;
+          border: none;
+          width: 100%;
+          border-radius: 15px;
+          height: 140px;
+          &::placeholder {
+            padding: 10px 16px;
+            font-family: "Poppins", sans-serif;
+          }
+        }
+        .button {
+          width: 41%;
+          margin: 15px 0 0 0;
+          border: none;
+          border-radius: 30px;
+          height: 50px;
+          font-size: 14px;
+          font-weight: 400;
+          background-color: #eb4d4b;
+          padding-top: 14px;
+          font-family: "Poppins", sans-serif;
+          transition: 0.5s;
+          &:hover {
+            background-color: black;
+          }
+        }
+      }
+    }
+    .subscrib {
+      padding: 30px 10px 30px;
+      border: 1px solid rgba(102, 102, 102, 0.15);
+      text-align: center;
+      .text {
+        span {
+          font-weight: 500;
+          font-size: 16px;
+          color: #eb4d4b;
+          letter-spacing: 6px;
+          font-family: "Poppins", sans-serif;
+        }
+        h2 {
+          font-size: 42px;
+          font-family: "Poppins", sans-serif;
+          font-weight: 700;
+        }
+        p {
+          margin-top: 10px;
+          margin-bottom: 20px;
+          width: 80px;
+          height: 4px;
+          background-color: #eb4d4b;
+          text-align: center;
+          display: inline-block;
+          font-family: "Poppins", sans-serif;
+        }
+      }
+      .icon-text {
+        line-height: 30px;
+        i {
+          font-size: 50px;
+          color: #eb4d4b;
+        }
+        h2 {
+          margin-top: 10px;
+          font-size: 22px;
+          font-weight: 600;
+          font-family: "Poppins", sans-serif;
+        }
+        p {
+          font-size: 16px;
+          color: #666;
+          font-weight: 400;
+          font-family: "Poppins", sans-serif;
+        }
+      }
+      .inp {
+        position: relative;
+        input {
+          height: 50px;
+          border-radius: 30px;
+          border: 1px solid #e5e5e5;
+          width: 80%;
+
+          &::placeholder {
+            padding: 10px;
+          }
+        }
+        .button {
+          position: absolute;
+          right: 39px;
+          top: 4px;
+          background-color: #eb4d4b;
+          border-radius: 41px;
+          width: 28%;
+          height: 42px;
+          color: white;
+        }
+      }
+    }
+  }
+  .footer_text_ {
+    padding-bottom: 33px;
+    position: relative;
+    top: 20px;
+    font-size: 15px;
+    .footer_text_up,
+    .footer_text_down {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      li {
+        list-style-type: none;
+        margin-right: 20px;
+
+        a {
+          text-decoration: none;
+          color: gray;
+          font-family: "Poppins", sans-serif;
+        }
+      }
+      .line {
+        width: 1px;
+        height: 15px;
+        background-color: gray;
+        position: relative;
+        right: 10px;
+      }
+    }
+  }
+  .footer_end_ {
+    display: none;
+    .accordion {
+      .accordion-item {
+        .first_accordion {
+          .accordion_body {
+            .accordion_ul {
+              padding: 0;
+              li {
+                list-style-type: none;
+                a {
+                  text-decoration: none;
+                  color: gray;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+  @media only screen and (max-width: 820px) {
+    .text {
+      display: none;
+      padding-bottom: 33px;
+      position: relative;
+      top: 20px;
+      font-size: 15px;
+
+      .textUp,
+      .textDown {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        li {
+          list-style-type: none;
+          margin-right: 20px;
+
+          a {
+            text-decoration: none;
+            color: gray;
+            font-family: "Poppins", sans-serif;
+          }
+        }
+        .line {
+          width: 1px;
+          height: 15px;
+          background-color: gray;
+          position: relative;
+          right: 10px;
+        }
+      }
+    }
+    .accMd {
+      padding-bottom: 15px;
+      display: block;
+      .accordion {
+        .accordion-item {
+          .accordion-header {
+            .accordion-button {
+              background-color: rgb(242, 246, 249);
+            }
+          }
+          .firstAcc {
+            .accBody {
+              background-color: rgb(242, 246, 249);
+              ul {
+                padding: 0;
+                li {
+                  list-style-type: none;
+                  a {
+                    text-decoration: none;
+                    color: gray;
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+.secondFooter {
+  background-color: #151515;
+  .box {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    .text-img {
+      p {
+        color: white;
+
+        a {
+          text-decoration: none;
+          color: white;
+        }
+      }
+    }
+  }
+  @media only screen and (max-width: 820px) {
+  }
+  @media only screen and (max-width: 391px) {
+    .box {
+      padding-top: 10px;
+      padding-bottom: 10px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+
+      .text-img {
+        p {
+          color: white;
+
+          a {
+            text-decoration: none;
+            color: white;
+          }
+        }
+      }
     }
   }
 }
